--- a/first-task.html
+++ b/first-task.html
@@ -12,15 +12,26 @@
   </div>
   <div class="grid-container">
     <div class="grid-item1">1</div>
-    <div class="grid-item">2</div>
-    <div class="grid-item">3</div>
-    <div class="grid-item">4</div>
-    <div class="grid-item">5</div>
-    <div class="grid-item">6</div>
-    <div class="grid-item">7</div>
-    <div class="grid-item">8</div>
-    <div class="grid-item">9</div>
-    <div class="grid-item">10</div>
+    <div class="grid-item2">2</div>
+    <div class="grid-item3">3</div>
+    <div class="grid-item4">4</div>
+    <div class="grid-item5">5</div>
+    <div class="grid-item6">6</div>
+    <div class="grid-item7">7</div>
+    <div class="grid-item8">8</div>
+    <div class="grid-item9">9</div>
+    <div class="grid-item10">10</div>
+    <div class="grid-item11">11</div>
+    <div class="grid-item12">12</div>
+    <div class="grid-item13">13</div>
+    <div class="grid-item14">14</div>
+    <div class="grid-item15">15</div>
+    <div class="grid-item16">16</div>
+    <div class="grid-item17">17</div>
+    <div class="grid-item18">18</div>
+    <div class="grid-item19">19</div>
+    <div class="grid-item20">20</div>
+    <div class="grid-item21">21</div>
   </div>
 </body>
 </html>
