--- a/first-task.html
+++ b/first-task.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <div class="name">
-    <p>Csongor Feher</p>
+    <a href="./second-task.html" target="_blank">
+      <p>Csongor Feher</p>
+    </a>
   </div>
   <div class="grid-container">
     <div class="grid-item1">1</div>
