ran out of time

--- a/second-task.html
+++ b/second-task.html
@@ -12,5 +12,12 @@
       <input type="button" value="back">
     </a>    
   </div>
+  <div class="image flex-container">
+    <img src="./style//img/unnamed.jpg" alt="">
+    <img src="./style//img/unnamed.jpg" alt="">
+    <img src="./style//img/unnamed.jpg" alt="">
+    <img src="./style//img/unnamed.jpg" alt="">
+    <img src="./style//img/unnamed.jpg" alt="">
+  </div>
 </body>
 </html>
